8322657: CDS filemap fastdebug assert while loading Graal CE Polyglot in isolated classloader

Reviewed-by: dholmes
Backport-of: 841ab487f83d7e3639d352e796dc7131310c2390